# findr

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  findr
.cache/clangd/index/: main.cpp.500DAFB355EBC5F8.idx
.github/workflows/: makefile.yml
src/: main.cpp
